# diode-agent

./: .gitignore  CODEOWNERS  README.md
.github/: CODEOWNERS  pull_request_labeler.yaml
.github/workflows/: diode-napalm-agent-lint-tests.yml
diode-napalm-agent/: README.md  config.sample.yaml  pyproject.toml  requirements.txt  sample.env
diode-napalm-agent/diode_napalm/: __init__.py  client.py  discovery.py  parser.py  translate.py  version.py
diode-napalm-agent/diode_napalm/cli/: __init__.py  cli.py
diode-napalm-agent/tests/: __init__.py  test_cli.py  test_client.py  test_discovery.py  test_parser.py  test_translate.py
diode-ping-agent/: README.md  pyproject.toml
diode-ping-agent/diode_ping/: __init__.py  arp.py  cli.py  client.py  discovery.py  parser.py  ports.py  translate.py
diode-suzieq-agent/: README.md  pyproject.toml
diode-suzieq-agent/cli/: diode-sq-agent.py
diode-suzieq-agent/db/: __init__.py  dummydb.py
diode-suzieq-agent/diode_suzieq/: __init__.py  client.py  newfile.yaml  parser.py  translate.py
diode-suzieq-agent/diode_suzieq/cli/: __init__.py  cli.py
diode-suzieq-agent/diode_suzieq/extension/: __init__.py
diode-suzieq-agent/diode_suzieq/extension/db/diode/: __init__.py  diodedb.py
diode-suzieq-agent/diode_suzieq/extension/worker/: diode.py
diode-suzieq-agent/worker/: diode.py
diode_suzieq_agent/: README.md  __init__.py  requirements.txt
diode_suzieq_agent/cli/: cli.py
diode_suzieq_agent/extension/worker/: diode.py
